@@ -1,141 +1,0 @@
-﻿l_simp_chinese:
-  je_keju: "科举制"
-  je_keju_reason: "自隋文帝开创科举制以来，中国各朝各代都在采用该制度进行官员选拔。明清两代科举主要考四书五经，考生必须采用死板的八股文，不许违背经注，不能自由发挥。\n\n这种选官体制虽培养了中国人刻苦读书的习惯，但它扼杀了读书人的创意和自由意志，使国家疏于创新。"
-  notification_je_keju_complete_name: "新式学校"
-  notification_je_keju_complete_desc: "新式学校已取代科举制。"
-  notification_je_keju_complete_tooltip: "新式学校已取代科举制，获得$modifier_abolish_keju$修正。"
-  notification_je_keju_name: "废除科举制"
-  notification_je_keju_desc: "科举制已被废除。"
-  notification_je_keju_tooltip: "科举制已被废除。"
-  je_keju.tt.1: "若完成此项，则废除科举制，兴办新式学堂"
-  je_keju.tt.2: "若完成此项，则只会废除科举制"
-  je_moh_tibet_look_for_new_dalai_lama: "寻找达赖喇嘛转世"
-  je_moh_tibet_look_for_new_dalai_lama_reason: "达赖喇嘛在[ROOT.GetCountry.GetCapital.GetName]圆寂，这一消息迅速传遍[ROOT.GetCountry.GetName]，民众纷纷陷入深切的哀悼之中。\n\n目前达赖喇嘛职权由摄政代理。为了保证[ROOT.GetCountry.GetName]的稳定，我们必须尽快找到达赖喇嘛的转世。进度条会每月推进，如果国家处于动乱或战争则会影响寻找进度。"
-  je_moh_tibet_look_for_new_dalai_lama.1.tt: "达赖喇嘛圆寂"
-  je_moh_tibet_look_for_new_dalai_lama.2.tt: "未在寻找达赖喇嘛转世"
-  je_moh_tibet_look_for_new_dalai_lama_goal: "找到达赖喇嘛转世"
-  #wuxu reform
-  je_wuxu: "维新变法"
-  je_wuxu_reason: "根据[GetIdeology('ideology_moh_reformer').GetName]的提议，此次变法的主要目的是要挽救[COUNTRY.GetName]，使其能够在世界上继续生存。变法的内容包括了政治、军事、经济、文化等各个方面。\n\n但是，变法的过程中，保守派势力也在积极反对，他们认为变法会破坏传统，导致国家动荡。\n\n#bold 维新派#!的势力会因特定条件#tooltippable;tooltip:[Country.GetTooltipTag],je_wuxu_special_tooltip_advance 推进#!或#tooltippable;tooltip:[Country.GetTooltipTag],je_wuxu_special_tooltip_deplete 回退#!。"
-  je_wuxu_special_tooltip_deplete: "以下条件会#bold 推进#!#N;bold 保守派#!势力：\n•[GetInterestGroupVariant('ig_landowners',GetPlayer).GetNameWithCountryVariant]在政府中且[concept_powerful]\n•被革职官员上书\n•保守派势力大于#N 250#!\n•$Cixi$是[concept_politician]\n•国内没有任何[GetIdeology('ideology_moh_reformer').GetName]或[GetIdeology('ideology_liberal_leader').GetName]存在\n•随机触发的#bold 事件#!"
-  je_wuxu_special_tooltip_advance: "以下条件会#bold 推进#!#P;bold 维新派#!势力：\n•出版#BOLD 维新派报纸#!\n•有[GetIdeology('ideology_moh_reformer').GetName]在政府中\n•已制定#BOLD 选举#!\n•[GetInterestGroupVariant('ig_landowners',GetPlayer).GetNameWithCountryVariant]在政府中且[concept_powerful]，但是[concept_leader]是[GetIdeology('ideology_moh_reformer').GetName]或[GetIdeology('ideology_liberal_leader').GetName]\n•[GetPlayer.GetRuler.GetFullNameWithTitle]是[GetIdeology('ideology_moh_reformer').GetName]或[GetIdeology('ideology_liberal_leader').GetName]\n•在首都设立新式学堂（[GetBuildingType('building_university').GetName]）\n•随机触发的#bold 事件#!"
-  wuxu_progress_bar_name: "戊戌变法的权力斗争"
-  wuxu_progress_bar_reformers_desc: "维新派势力"
-  wuxu_progress_bar_conservatives_desc: "保守派势力"
-  wuxu_progress_bar_weekly_decrease: "过于雄厚的保守派势力"
-  wuxu_progress_bar_voting: "已有选举制度"
-  wuxu_progress_bar_newspaper: "《中外纪闻》报纸"
-  wuxu_progress_bar_in_government: "有维新派在政府中"
-  wuxu_progress_bar_landowner_powerful: "保守派在政府中且[concept_powerful]"
-  wuxu_progress_bar_no_reformers: "国内没有任何[GetIdeology('ideology_moh_reformer').GetName]"
-  wuxu_progress_bar_random_event: "随机触发的#bold 事件#!"
-  wuxu_progress_bar_random_event_heavy: "随机触发的#bold 事件#!（强烈）"
-  wuxu_progress_bar_university: "[ROOT.GetCountry.GetCapital.GetName]的新式学堂（[GetBuildingType('building_university').GetName]）"
-  je_wuxu.tt.1: "在[GetIdeology('ideology_moh_reformer').GetName]势力没有被压倒前完成："
-  je_wuxu.tt.2: "[GetIdeology('ideology_moh_revolutionary').GetName]们的情绪得到了安抚"
-  je_wuxu.tt.3: "保守派胜利"
-  je_wuxu.tt.4: "#variable 75%#!的$building_barracks$已启用$pm_advanced_tactics_training$"
-  je_wuxu.tt.5: "你能听到耳边的枪炮声更响了……"
-  je_wuxu.tt.6: "完成#bold 八旗#![concept_journal_entry]"
-  print_reformer_newspaper: "资助出版《中外纪闻》报纸"
-  print_reformer_newspaper_desc: "维新派报纸是维新派势力的宣传工具，用以推动变法运动。"
-  print_reformer_newspaper_button.tt.1: "最近没有出版《中外纪闻》报纸"
-  print_reformer_newspaper_button.tt.2: "维新派势力获得#P 3#!点推进"
-  steady_advancement: "稳步推进"
-  steady_advancement_desc: "维新派已扳倒保守派，变法运动不再急于求成，转而稳步推进。"
-  steady_advancement.tt.1: "保持15周保守派失势状态"
-  dismissed_officials_petition: "革职官员上书"
-  dismissed_officials_petition_desc: "因维新变法运动而被革职的官员上书请求终止这场变法。"
-  dismissed_officials_petition.tt.1: "仅可启用一次"
-  dismissed_officials_petition.tt.2: "保守派势力获得#N 25#!点推进"
-  china_wuxu_tt: "成功完成#bold 维新变法#!日志条目"
-  china_treaty_ports_tt: "收回所有[concept_treaty_port]和[GetCulture('han').GetName]人[Concept('concept_homeland', '$concept_homelands$')]"
-  je_8_flags: "八旗"
-  je_8_flags_reason: "八旗是[ROOT.GetCountry.GetName]的军事组织，由[GetCulture('manchu').GetName]人组成，分为正黄、镶黄、正白、镶白、正红、镶红、正蓝、镶蓝八旗。八旗军队是[ROOT.GetCountry.GetName]的主要军事力量，也是清朝的统治基础。\n\n但是，随着时代的前进，八旗军队的实力#bold 逐渐衰落#!，已经无法适应现代战争的需要。为了提升军队实力，我们必须对八旗军队进行改革。"
-  8_flags_complete_tt: "[concept_army]已有一定规模的#bold 堑壕步兵#!"
-  8_flags_on_complete_tt_1: "可能会对#bold 维新变法#![concept_journal_entry]有所帮助"
-  8_flags_on_complete_tt_2: "$modifier_8_flags$被解散，不过新军的思想很#bold 先进#!"
-  8_flags_on_complete_tt_3: "$modifier_8_flags$被解散"
-  je_incorporate_the_west: "整合西部领土"
-  je_incorporate_the_west_reason: "自从[ROOT.GetCountry.GetName]击败准噶尔汗国后，我们已经基本控制了西部地区。但是，但是由于西部民族组成复杂，地理环境恶劣，导致西部领土的开发困难。我们必须对西部领土进行整合。"
-  je_self_strengthing: "洋务运动"
-  je_self_strengthing_reason: "根据洋务派的要求，我们要尽快发展我们的军事实力，以抵御外敌的侵略。"
-  je_self_strengthing.tt.complete.world: "海军力量世界第三"
-  je_self_strengthing.tt.complete.asia: "海军力量亚洲第一"
-  je_father_of_the_republic: "国父"
-  je_father_of_the_republic_reason: "中国军阀混战，国家危机四伏。国父希望通过二次革命统一中国，结束这种局面。\n\n统一中国少不了国父的支持，不过想要让国父支持你并不是一件容易的事，我们可能需要通过国父支持的[Concept('concept_law', '$concept_laws$')]才可以使其满意，转而支持我们。\n\n如果中华大地没有国父看好的势力，他将会#bold 出国#!，制定#tooltippable;tooltip:[Country.GetTooltipTag],je_modifier_father_laws 他支持的法律#!可以吸引国父回国，被国父支持的势力可以获得#blue;tooltip:[Country.GetTooltipTag],je_modifier_father 加成#!。"
-  je_father_of_the_republic.tt.complete: "完成#bold 军阀时代#![concept_journal_entry]"
-  je_father_of_the_republic.tt.on.complete: "[GetGlobalVariable('sun_yatsen').GetCharacter.GetCustom('GetUniversalFullName')]成为[concept_ruler]"
-  je_father_of_the_republic.tt.fail: "国父逝世"
-  je_modifier_father: "TODO国父"
-  father_of_the_republic_status_1: "国父不在中国，制定他支持的法律吸引他回国。"
-  father_of_the_republic_status_2: "这将会鼓舞整个[GetGlobalVariable('sun_yatsen_in').GetCountry.GetNameNoFlag]的士气。"
-  je_modifier_father_laws: "#bold;gold 国父支持的法律#!\n@green_checkmark![GetLawType('law_presidential_republic').GetName]\n@green_checkmark![GetLawType('law_parliamentary_republic').GetName]\n@green_checkmark![GetLawType('law_homesteading').GetName]\n@green_checkmark![GetLawType('law_wealth_voting').GetName]\n@green_checkmark![GetLawType('law_census_voting').GetName]\n@green_checkmark![GetLawType('law_universal_suffrage').GetName]\n@green_checkmark![GetLawType('law_right_of_assembly').GetName]\n@green_checkmark![GetLawType('law_protected_speech').GetName]\n@red_cross![GetLawType('law_no_womens_rights').GetName]\n@red_cross![GetLawType('law_no_health_system').GetName]"
-  je_daoguang_reform_main: "道光皇帝"
-  je_daoguang_reform_main_reason: "道光皇帝在位时期，[ROOT.GetCountry.GetName]正面临内忧外患。若袖手旁观只怕[ROOT.GetCountry.GetNameNoFlag]将无翻身机会。\n\n良好的开始等于成功的一半，完成三项改革任务，迎接这个变化多端的时代。"
-  je_daoguang_reform_main_complete_tt: "完成#bold 漕粮海运#!、#bold 查禁鸦片#!和#bold 开采矿产#!三项改革任务。"
-  je_daoguang_reform_main_fail_tt: "在没有完成三项改革的情况下，道光皇帝驾崩"
-  je_daoguang_reform_grain: "道光皇帝：漕粮海运"
-  je_daoguang_reform_grain_reason: "道光皇帝希望通过海运来解决[GetGoods('grain').GetName]运输问题，以保证[concept_capital_state]的粮食供应。"
-  je_daoguang_reform_opium: "道光皇帝：查禁鸦片"
-  je_daoguang_reform_opium_reason: "“将内地吸食[GetGoods('opium').GetName]者俱罪死”"
-  je_daoguang_reform_opium_complete_tt: "随着时间的推进，[SCOPE.gsInterestGroup('petty_bourgeoisie_ig').GetLeader.GetCustom('GetUniversalFullName')]会告诉你解决办法"
-  je_daoguang_reform_mine: "道光皇帝：开采矿产"
-  je_daoguang_reform_mine_reason: "道光皇帝希望通过开采矿产来增加国家财政收入。"
-  je_daoguang_reform_main_fail_lin_tt: "[SCOPE.gsInterestGroup('petty_bourgeoisie_ig').GetLeader.GetCustom('GetUniversalFullName')]去世或被罢免"
-  je_daoguang_reform_opium_on_complete_tt: "#bold 道光皇帝#![concept_journal_entry]进度条增加#variable 1#!"
-  je_prince_gong: "恭亲王"
-  je_prince_gong_reason: "这位宗室成员在[ROOT.GetCountry.GetName]的政治生涯中扮演着重要角色。他的政治立场和行动将会影响到[ROOT.GetCountry.GetName]的政治走向。\n\n他可能会影响[Concept('concept_law', '$concept_laws$')]的制定或外交方针，不过如果让他的权力太大也会产生一些不好的结果……\n\n制定他赞同的[Concept('concept_law', '$concept_laws$')]，正面的[Concept('concept_war', '$concept_wars$')]议和、提高他的人气都会增加他的权势，反之则会降低他的权势。"
-  je_prince_gong_status_balanced: "恭亲王目前的权势：#blue 平衡#!。"
-  je_prince_gong_status_high: "恭亲王目前的权势：#blue 高#!。"
-  je_prince_gong_status_low: "恭亲王目前的权势：#blue 低#!。"
-  je_prince_gong_complete_tt: "恭亲王自然死亡"
-  je_prince_gong_fail_tt: "恭亲王的权势到达#variable 0#!或#variable 100#!"
-  gong_progress_bar: "恭亲王的权势"
-  gong_progress_bar_desc: "恭亲王的权势"
-  je_jingzhang_railway: "京张铁路"
-  je_jingzhang_railway_reason: "京师乃国之重心，尽管困难重重，我们也必须保证此铁路由我们自行修建。"
-  je_xianfeng: "咸丰皇帝的命运"
-  je_xianfeng_reason: "咸丰皇帝在位时期，后宫之事让他心神疲惫，不能专心理政。不过，不得不说他在疲惫的状态下也尽力明诏求贤。\n\n在这种状态下，咸丰皇帝身体衰弱，如果国家有#tooltippable;tooltip:[Country.GetTooltipTag],je_xianfeng_tooltip 很大的事情#!让咸丰皇帝感到压力，他可能会因此积劳成疾。"
-  je_xianfeng_tooltip: "#bold;gold 以下事件会让皇帝感到压力#!\n•处于战争状态\n•火烧圆明园\n•近期战败\n•任意省份存在动乱"
-  je_xianfeng_complete_tt: "咸丰皇帝自然死亡"
-  je_xianfeng_fail_tt: "进度条到达#variable 100%#!"
-  je_xianfeng_on_fail_tt: "咸丰皇帝会因#bold 积劳成疾#!而死， 因此导致了身后朝政事宜不合理的安排"
-  xianfeng_progress_bar_war_desc: "战争状态"
-  xianfeng_progress_bar_old_summer_palace_desc: "火烧圆明园"
-  xianfeng_progress_bar_lost_war_desc: "近期输掉战争"
-  xianfeng_progress_bar_turmoil_desc: "存在动乱"
-  xianfeng_progress_bar_great_power_desc: "是[concept_great_power]"
-  xianfeng_progress_bar_standard_living_desc: "较高的[concept_sol]"
-  xianfeng_progress_bar_won_war_desc: "近期赢得战争"
-  xianfeng_progress_bar_monthly_desc: "自然增长"
-  xianfeng_progress_bar: "咸丰皇帝驾崩"
-  xianfeng_progress_bar_desc: "咸丰皇帝驾崩"
-  je_xinhai: "革命党？"
-  je_xinhai_reason: "朝廷近期抓到几个自称[GetIdeology('ideology_moh_revolutionary').GetName]的人，他们的目标居然是推翻[GetLawType('law_monarchy').GetName]，搞什么所谓的共和。\n\n目前我们已派人关注此事，希望在此期间各地不要再爆发#bold 起义#!了。"
-  je_xinhai_fail_tt: "爆发革命"
-  je_fra_dai: "印度支那的利益"
-  je_fra_dai_reason: "印度支那是我们的利益所在，我们必须保护这片土地。"
-  je_panthay_rebellion: "镇压回乱"
-  je_panthay_rebellion_reason: "镇压这场由械斗引发的[GetReligion('sunni').GetName]信徒的叛乱。"
-  je_panthay_rebellion_complete_tt: "成功镇压叛乱"
-  je_panthay_rebellion_on_complete_tt: "这么多人聚在一起，总会有些意料外的事情发生……"
-  je_plague_pandemic: "鼠疫"
-  je_plague_pandemic_reason: "鼠疫在[ROOT.GetCountry.GetName]爆发，我们必须尽快采取措施，防止疫情蔓延。\n\n我们可以通过增加[GetInstitutionType('institution_health_system').GetName|l]投入至#variable 4#!级以上，或者通过研发#bold $antibiotics$#!科技来增加进度条进度，随机触发的#bold 事件#!也可能会对进度有影响。\n\n请尽量阻止疫情蔓延，如果鼠疫蔓延至一座[concept_treaty_port]，将可能导致#bold 全球鼠疫大流行#!。"
-  je_plague_pandemic_on_complete_tt: "[ROOT.GetCountry.GetName]所有地区失去#bold 鼠疫#!"
-  je_plague_pandemic_complete_tt: "进度条到达#variable 100%#!"
-  je_new_culture: "新文化运动"
-  je_new_culture_reason: "随着言论与出版自由的放松，新文化运动在[ROOT.GetCountry.GetName]迅速发展。新文化运动的主要目标探索[ROOT.GetCountry.GetName]未知的未来道路，推动的现代化进程。"
-  new_culture_communist_progress_bar: "共产党影响力"
-  new_culture_united_provinces_progress_bar: "联省派影响力"
-  new_culture_monarchy_progress_bar: "君主立宪影响力"
-  new_culture_anarchist_progress_bar: "无政府影响力"
-  new_culture_presidential_autocracy_progress_bar: "总统独裁影响力"
-  new_culture_communist_progress_bar_desc: "共产党影响力：#v [JournalEntry.GetCurrentBarProgress(ScriptedProgressBar.Self)|%]#!"
-  new_culture_united_provinces_progress_bar_desc: "联省派影响力：#v [JournalEntry.GetCurrentBarProgress(ScriptedProgressBar.Self)|%]#!"
-  new_culture_monarchy_progress_bar_desc: "君主立宪影响力：#v [JournalEntry.GetCurrentBarProgress(ScriptedProgressBar.Self)|%]#!"
-  new_culture_anarchist_progress_bar_desc: "无政府影响力：#v [JournalEntry.GetCurrentBarProgress(ScriptedProgressBar.Self)|%]#!"
-  new_culture_presidential_autocracy_progress_bar_desc: "威权制影响力：#v [JournalEntry.GetCurrentBarProgress(ScriptedProgressBar.Self)|%]#!"
-  new_culture_complete_tt: "除#bold 共产党#!外，如果其他派别影响力达到#variable 100%#!，则会立即变为该派别的政体。如果#bold 共产党#!影响力达到#variable 100%#!，国家的前途将由后续事件决定。"
-  new_culture_communist_progress_bar_tech_decrease: "未研发$socialism$"
-  new_culture_anarchist_progress_bar_tech_decrease: "未研发$anarchism$"
