@@ -1,31 +1,0 @@
-﻿l_simp_chinese:
-  modifier_chi_keju: "科举制"
-  modifier_abolish_keju: "废除科举制"
-  modifier_chi_wuxu: "急于求成的变法"
-  modifier_chi_wuxu_stable: "稳步推进的变法"
-  book_campaign_modifier: "资助书局"
-  modifier_wuxu_experienced_teacher: "有经验的教师"
-  modifier_support_overseas_chinese: "海外华人支持"
-  modifier_great_assembly: "声势浩大的集会"
-  flood_of_pirates: "海盗横行"
-  modifier_8_flags: "八旗"
-  modifier_western_incorporation: "成功整合西部"
-  modifier_western_incorporation_failed: "西部整合失败"
-  modifier_official_corruption: "官员腐败"
-  modifier_self_strengthing: "洋务运动"
-  modifier_father: "国父"
-  modifier_daoguang: "道光中兴"
-  modifier_daoguang_failed: "嘉道中衰"
-  modifier_xianfeng: "咸丰皇帝"
-  modifier_xianfeng_failed: "两宫亲政"
-  modifier_chi_xinhai: "革命党活动"
-  modifier_opera: "剧团"
-  modifier_opera_expensive: "付费的剧团"
-  modifier_imperial_art_studio: "宫廷书画工坊"
-  modifier_imperial_art_show: "宫廷书画展"
-  modifier_panthay: "回变"
-  modifier_plague_pandemic: "鼠疫"
-  modifier_plague_relief: "鼠疫救助"
-  modifier_plague_lockdown: "鼠疫隔离"
-  modifier_wuxu_authority: "维新派滥权"
-  modifier_conservatism_grow: "保守派抬头"
